--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,15 @@
 body {
     background-image: url("../media/images/simon-lee-unsplash.jpg");
     background-size: cover;
+    overflow: hidden;
+}
+
+.section {
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(5px);
+    height: 20rem;
+    width: 60rem;
+    margin-top: 2rem;
+    border-radius: 1rem;
+
 }
