--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,15 +1,23 @@
 body {
     background-image: url("../media/images/simon-lee-unsplash.jpg");
-    background-size: cover;
-    overflow: hidden;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+    background-position: center;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 .section {
     background-color: rgba(255, 255, 255, .15);  
     backdrop-filter: blur(5px);
-    height: 20rem;
-    width: 60rem;
-    margin-top: 2rem;
+    height: 25rem;
+    width: 55rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     border-radius: 1rem;
 
 }
+
